--- a/healthyband_project/bandapp/templates/bandapp/welcome.html
+++ b/healthyband_project/bandapp/templates/bandapp/welcome.html
@@ -17,10 +17,10 @@
     <section class="text-gray-600 body-font">
         <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
           <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
-            <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">SECURIX
-              <br class="hidden lg:inline-block">Secure Code Analysis and Risk Identification eXpert
+            <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">HealthyBand
+              <br class="hidden lg:inline-block text-sm">For Fitness Freak
             </h1>
-            <p class="mb-8 leading-relaxed">SECURIX is an advanced software tool specializing in secure code analysis, proficient in identifying potential vulnerabilities and assessing risks to enhance overall cybersecurity. With its expert capabilities, SECURIX provides comprehensive insights to fortify code integrity and mitigate potential threats.</p>
+            <p class="mb-8 leading-relaxed">Introducing HealthyBand, a sleek wearable with heart pulse, oximeter, and gyro sensors. Monitor health, receive alerts, and enable remote patient care effortlessly</p>
             <div class="flex justify-center">
 
               
@@ -36,7 +36,7 @@
             </div>
           </div>
           <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-            <img src="{% static 'bandapp\setup\images\hero.png' %}" class="h-10/12 mr-3" alt="Plant root img" />
+            <img src="{% static 'bandapp\setup\images\logo-3.png' %}" class="h-10/12 mr-3 rounded-2xl" alt="Plant root img" />
           </div>
         </div>
     </section>
