--- a/ehrexchangewall_project/ehr_app/templates/ehr_app/base.html
+++ b/ehrexchangewall_project/ehr_app/templates/ehr_app/base.html
@@ -14,7 +14,7 @@
     <title>{% block title %}{% endblock %}</title>
 
     
-    <link rel="icon" type="image/png" href="{% static 'ehr_app\ehr-logo.png' %}">
+    <link rel="icon" type="image/png" href="{% static '/ehr_app/ehr-logo.png' %}">
 
     <style>
         .body-container {
