--- a/ehrexchangewall_project/ehr_app/templates/ehr_app/login.html
+++ b/ehrexchangewall_project/ehr_app/templates/ehr_app/login.html
@@ -6,7 +6,8 @@
 
     {% load static %}
 
-    <script src="{% static 'ehr_app\setup\tailwindcss.js' %}"></script>
+    <script src="{% static '/ehr_app/setup/tailwindcss.js' %}"></script>
+        <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
 
     <title>Login</title>
